Herwig News							 -*- outline -*-
================================================================================


* Herwig 7.1.3 release: 2018-04-05

** Dipole Shower
*** Changed default phase space limits
*** g -> gg splitting function asymmetrized
*** Initial retune supplied, given the visible changes 
    to LEP observables

** Added new Baryonic colour reconnection model 
   (arXiv 1710:10906)

** Added Schuler-Sjostrand Photon PDFs

** Handling of massless taus from external sources

** various minor fixes

** use std::array<> where possible



* Herwig 7.1.2 release: 2017-11-01

** Reduction of the default pt cut for QED radiation off leptons.

** Inputfile changes due to new read mode in ThePEG.
   ThePEG remains in current repo dir when reading input-file/snippet. 

** Fix for shower scale variations in qtilde shower. 

** All standard input files now use the tuned intrinsic pt.

** Remove obsolete input files for various tunes.

** Fix for Madgraph interface for NLO corrections with recent version.

** Run file size reduction for processes using madgraph/openloops.

** Fix in jacobian for massive dipole kinematics.

** General improvements for UFO model handling.



* Herwig 7.1.1 release: 2017-07-14

** Snippets are now all installed

** Fixed broken ufo2herwig output and LHC-MB.in

** UFO improvements
*** More robust SLHA file handling
*** option of creating diagonal mixing matrices, needed for ATLAS simplfied models
*** Improved warnings about resetting standard model particles
*** Fixed certain cases where the wrong lorentz structure was picked in VVS vertices

** Improved error message for unhandled beam particles

** Fix for Dipole Shower chain selection

** Fixed crash in double diffractive delta resonances



* Herwig 7.1.0 release: 2017-05-19

** Major new release
   For a more detailed overview and further references please see the 
   release note arXiv:1705.06919

** NLO multijet merging with the dipole shower

** A new soft model
