@@ -1,5 +1,5 @@
 ================================================================================
-Herwig 7.1.3
+Herwig 7.1.4
 ================================================================================
 
 Please contact <herwig@projects.hepforge.org> for any queries.
