@@ -3,4 +3,4 @@ HwMEDIS_la_SOURCES = \
 DISBase.h DISBase.cc \
 MENeutralCurrentDIS.cc  MENeutralCurrentDIS.h  \
 MEChargedCurrentDIS.cc  MEChargedCurrentDIS.h
-HwMEDIS_la_LDFLAGS = $(AM_LDFLAGS) -module -version-info 7:0:0
+HwMEDIS_la_LDFLAGS = $(AM_LDFLAGS) -module -version-info 7:1:0
