@@ -7,4 +7,4 @@ MEee2HiggsVBF.h MEee2HiggsVBF.cc \
 MEee2VV.h MEee2VV.cc \
 MEee2VectorMeson.h MEee2VectorMeson.cc \
 MEee2Higgs2SM.h MEee2Higgs2SM.cc
-HwMELepton_la_LDFLAGS = $(AM_LDFLAGS) -module -version-info 7:0:0
+HwMELepton_la_LDFLAGS = $(AM_LDFLAGS) -module -version-info 7:1:0
