@@ -2,7 +2,7 @@
 Herwig 7
 ========
 
-This is the release of Herwig 7.1.3, a multi purpose event
+This is the release of Herwig 7.1.4, a multi purpose event
 generator for high energy physics.
 
 The Herwig++ distribution contains an adapted version of LoopTools 2.6
